<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>
        <SwitchPreferenceCompat
            app:key="switch_exercise_share_activity_level"
            app:title="@string/switch_exercise_share_activity_level_title" />
    </PreferenceCategory>

    <PreferenceCategory>
        <PreferenceScreen
            app:key="btn_exercise_inactivity_detection"
            app:title="@string/btn_exercise_inactivity_detection_title">
            
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory>
        <PreferenceScreen
            app:key="btn_exercise_change_goal"
            app:title="@string/btn_exercise_change_goal_title">
            <intent
                android:targetPackage="com.example.boxtypetemplate"
                android:targetClass="com.example.boxtypetemplate.exercise.ExerciseSettingGoalActivity"/>
        </PreferenceScreen>
        <PreferenceScreen
            app:key="btn_exercise_tutorial"
            app:title="@string/btn_exercise_tutorial_title">
            <intent
                android:targetPackage="com.example.boxtypetemplate"
                android:targetClass="com.example.boxtypetemplate.exercise.ExerciseTutorialActivity"/>
        </PreferenceScreen>
    </PreferenceCategory>


</PreferenceScreen>