<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingContactActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_contact_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/exercise_contact_setting_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_setting_first_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_contact" />

        <Button
            android:id="@+id/btn_setting_second_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_contact" />

        <Button
            android:id="@+id/btn_setting_third_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_contact" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_setting_cascading_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_setting_cascading_title" />
    </LinearLayout>
</LinearLayout>